[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/STIXTwoMath-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://rsc/main/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/Retro Beat.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sound.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[node name="Main" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.352941, 0.180392, 0.47451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -50.5
margin_bottom = 50.5
custom_fonts/font = SubResource( 1 )
text = "Pausado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgL" type="Label" parent="."]
modulate = Color( 0, 0.384314, 0.54902, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 141.5
margin_bottom = 242.5
custom_fonts/font = SubResource( 3 )
text = "Fondo: Celeste"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Veces" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -241.0
margin_bottom = -140.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.752941, 0.258824, 0.258824, 1 )
text = "Veces reproducida hasta el final = 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausarResumir" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -132.5
margin_top = -197.0
margin_right = 132.5
margin_bottom = -120.0
custom_fonts/font = SubResource( 2 )
text = "Pausar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inicio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -132.5
margin_top = -101.0
margin_right = 132.5
margin_bottom = -24.0
custom_fonts/font = SubResource( 2 )
text = "Inicio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="."]
margin_left = 897.0
margin_top = 479.0
margin_right = 987.0
margin_bottom = 569.0
color = Color( 0.0313726, 0.682353, 0.654902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Sprite" parent="."]
position = Vector2( 939.007, 523.849 )
texture = ExtResource( 4 )

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 954.544, 523.87 )
scale = Vector2( 0.0941724, 0.0941724 )
texture = ExtResource( 5 )
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
[connection signal="pressed" from="PausarResumir" to="." method="_on_PausarResumir_pressed"]
[connection signal="pressed" from="Inicio" to="." method="_on_Inicio_pressed"]
